# mcp-server-ns-bridge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .quorum.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_TOOLS.md  DOCKER.md  Dockerfile  LICENSE  QUICKSTART.md  README.docker.md  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  release.yml
src/ns_bridge/: ns_api_client.py  server.py
src/ns_trains_mcp/: __init__.py  config.py  models.py  ns_api_client.py  server.py
tests/: __init__.py  test_config.py  test_models.py
